--- a/testing.html
+++ b/testing.html
@@ -116,7 +116,7 @@
     <div class="text" id="text2">dialogue</div>
 
     <!-- Light/Dark Mode Toggle -->
-    <div class="mode-toggle" id="modeToggle">Toggle Mode</div>
+    <div class="mode-toggle" id="modeToggle">toggle mode</div>
     <div class="mode-label" id="modeLabel">Light Mode</div>
 
     <script>
