--- a/testing.html
+++ b/testing.html
@@ -116,8 +116,8 @@
     <div class="text" id="text2">dialogue</div>
 
     <!-- Light/Dark Mode Toggle -->
-    <div class="mode-toggle" id="modeToggle">toggle mode</div>
-    <div class="mode-label" id="modeLabel">Light Mode</div>
+    <div class="mode-toggle" id="modeToggle">dark mode</div>
+    <div class="mode-label" id="modeLabel">light mode</div>
 
     <script>
         const imageUrls = ['https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png'];
