--- a/journals.html
+++ b/journals.html
@@ -102,7 +102,7 @@
         let isDraggingWindow = false;
         let journalStates = [false, false];
 
-        //mobile check
+        //mobile checks
         const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
         if (isMobile) {
             document.getElementById('mobileMessage').style.display = 'flex';
