--- a/journals.html
+++ b/journals.html
@@ -85,7 +85,7 @@
 
 
     <div class="draggable" id="draggable1"></div>
-    <div class="text" id="text1">placeholder</div>
+    <div class="text" id="text1">vent 1/30/25</div>
     <div class="draggable" id="draggable2"></div>
     <div class="text" id="text2">dialogue</div>
 
@@ -150,7 +150,7 @@
             journalStates[id] = true;
 
             const urls = [
-                `https://nuriel.net/journals/placeholder.txt`,
+                `https://nuriel.net/journals/vent 1/30/25.txt`,
                 `https://nuriel.net/journals/dialogue.txt`
             ];
 
