--- a/journals.html
+++ b/journals.html
@@ -150,7 +150,7 @@
             journalStates[id] = true;
 
             const urls = [
-                `https://nuriel.net/journals/vent 1/30/25.txt`,
+                `https://nuriel.net/journals/vent 1.30.25.txt`,
                 `https://nuriel.net/journals/dialogue.txt`
             ];
 
