--- a/journals.html
+++ b/journals.html
@@ -135,7 +135,7 @@
             }
         }
 
-        // saves to cookie
+        // saves to cookie.
         function savePosition(id) {
             const position = {
                 x: parseInt(draggables[id].style.left),
