--- a/journals.html
+++ b/journals.html
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <div class="mobile-message" id="mobileMessage">Mobile not supported yet, sorry :(</div>
+    <div class="mobile-message" id="mobileMessage">mobile not supported yet, sorry :(</div>
 
 
     <div class="draggable" id="draggable1"></div>
