--- a/journals.html
+++ b/journals.html
@@ -83,28 +83,31 @@
 <body>
     <div class="mobile-message" id="mobileMessage">mobile not supported yet, sorry :(</div>
 
-
     <div class="draggable" id="draggable1"></div>
     <div class="text" id="text1">vent 1/30/25</div>
     <div class="draggable" id="draggable2"></div>
     <div class="text" id="text2">dialogue</div>
     <div class="draggable" id="draggable3"></div>
     <div class="text" id="text3">revelation</div>
+    <div class="draggable" id="draggable4"></div>
+    <div class="text" id="text4">to my understanding</div>
 
     <script>
         const imageUrls = ['https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png'];
         const draggables = [
             document.getElementById('draggable1'),
             document.getElementById('draggable2'),
-            document.getElementById('draggable3')
+            document.getElementById('draggable3'),
+            document.getElementById('draggable4')
         ];
         const texts = [
             document.getElementById('text1'),
             document.getElementById('text2'),
-            document.getElementById('text3')
+            document.getElementById('text3'),
+            document.getElementById('text4')
         ];
         let isDraggingWindow = false;
-        let journalStates = [false, false, false];
+        let journalStates = [false, false, false, false];
 
         //mobile checks
         const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
@@ -156,7 +159,8 @@
             const urls = [
                 `https://nuriel.net/journals/vent1.txt`,
                 `https://nuriel.net/journals/dialogue.txt`,
-                `https://nuriel.net/journals/revelation.txt`
+                `https://nuriel.net/journals/revelation.txt`,
+                `https://nuriel.net/journals/tomyunderstanding.txt`
             ];
 
             const newWindow = document.createElement('div');
