--- a/journals.html
+++ b/journals.html
@@ -91,20 +91,24 @@
     <div class="text" id="text3">revelation</div>
     <div class="draggable" id="draggable4"></div>
     <div class="text" id="text4">to my understanding</div>
-
+    <div class="draggable" id="draggable5"></div>
+    <div class="text" id="text5">ive been VERY wrong</div>
+    
     <script>
         const imageUrls = ['https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png'];
         const draggables = [
             document.getElementById('draggable1'),
             document.getElementById('draggable2'),
             document.getElementById('draggable3'),
-            document.getElementById('draggable4')
+            document.getElementById('draggable4'),
+            document.getElementById('draggable5')
         ];
         const texts = [
             document.getElementById('text1'),
             document.getElementById('text2'),
             document.getElementById('text3'),
-            document.getElementById('text4')
+            document.getElementById('text4'),
+            document.getElementById('text5')
         ];
         let isDraggingWindow = false;
         let journalStates = [false, false, false, false];
@@ -160,7 +164,8 @@
                 `https://nuriel.net/journals/vent1.txt`,
                 `https://nuriel.net/journals/dialogue.txt`,
                 `https://nuriel.net/journals/revelation.txt`,
-                `https://nuriel.net/journals/tomyunderstanding.txt`
+                `https://nuriel.net/journals/tomyunderstanding.txt`,
+                `https://nuriel.net/journals/imwrong.txt`
             ];
 
             const newWindow = document.createElement('div');
