--- a/socials.html
+++ b/socials.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>socials</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/FireMS/nuriel/refs/heads/main/folderImages/icon.jpg" type="image/x-icon">
     <style>
         /*draggable folder css element*/
         .draggable {
