--- a/journals.html
+++ b/journals.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>journals</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/FireMS/nuriel/refs/heads/main/folderImages/icon.jpg" type="image/x-icon">
     <style>
         .window {
             width: 400px;
