--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About</title>
+  <title>about</title>
+  <link rel="icon" href="https://raw.githubusercontent.com/FireMS/nuriel/refs/heads/main/folderImages/icon.jpg" type="image/x-icon">
   <style>
     body {
       font-family: 'Comic Sans MS', cursive;
