--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             position: absolute;
             text-align: center;
             user-select: none;
-            font-family: 'Comic Sans MS', cursive;
+            font-family: 'Comic Sans MS';
         }
         /* mobile unsupported message */
         .mobile-message {
