--- a/about.html
+++ b/about.html
@@ -40,23 +40,15 @@
   </style>
 </head>
 <body>
-  <p class="intro">hi!</p>
-  <p>This website is meant to share really anything I feel like; stuff I write, philosophies I adopt, conflicting dilemmas I think of, pretty much anything.<br><br>
-  My intentions with this website are to paint a clearer picture of myself to you, because I feel that I've gotten too used to playing myself up to entertain and/or fit in.<br><br>
-  I apologize in advance if some of the writing on here comes off as pretentious or annoying at times; those are habits I've adopted in writing and I work to fix them.<br><br>
-  My goal is that somebody will find this website and find something that can resonate with them, maybe offer some perspective or guidance.<br><br>
-  If I ever do open up other social media or start something new, chances are it'll be written about here. So in the future, if you're ever thinking "How's that Nuriel guy doing?"<br><br>
-  Come here and whatever I'm up to will most likely be posted.<br><br>
-  If I ever do get better at web design I would like to setup an anonymous message system, so that way you can ask questions anonymously and I'll give my thoughts here on some page on this site.<br><br>
-  So if I did ever do that, it'll most likely be on this page right below this text, so if you ever want my two cents on something, feel free to ask!<br><br>
-  It's forwarded to my personal email, so I'll get back to it as fast as I can.</p>
-
+  <p class="intro">under construction!</p>
+  <br>
+  <p>submission system still works and i will begin replying soon sorry for delay!</p>
   <form action="https://formspree.io/f/xoqgzade" method="POST">
     <label>
-      Your message:
+      message here:
       <textarea name="message" placeholder="ask anything anonymously"></textarea>
     </label>
-    <button type="submit">Send</button>
+    <button type="submit">send</button>
   </form>
 
   <script>
