--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
   <form action="https://formspree.io/f/xoqgzade" method="POST">
     <label>
       message here:
-      <textarea name="message" placeholder="ask anything anonymously"></textarea>
+      <textarea name="message" placeholder="send whatever dont trip its anonymous"></textarea>
     </label>
     <button type="submit">send</button>
   </form>
