--- a/journals.html
+++ b/journals.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>journals</title>
+    <title>under construction</title>
     <link rel="icon" href="https://raw.githubusercontent.com/FireMS/nuriel/refs/heads/main/folderImages/icon.jpg" type="image/x-icon">
     <style>
         .window {
