--- a/journals.html
+++ b/journals.html
@@ -86,17 +86,17 @@
     <div class="mobile-message" id="mobileMessage">mobile not supported yet, sorry :(</div>
 
     <div class="draggable" id="draggable1"></div>
-    <div class="text" id="text1">vent 1/30/25</div>
+    <div class="text" id="text1">placeholder/30/25</div>
     <div class="draggable" id="draggable2"></div>
-    <div class="text" id="text2">dialogue</div>
+    <div class="text" id="text2">placeholder</div>
     <div class="draggable" id="draggable3"></div>
-    <div class="text" id="text3">revelation</div>
+    <div class="text" id="text3">placeholder</div>
     <div class="draggable" id="draggable4"></div>
-    <div class="text" id="text4">to my understanding</div>
+    <div class="text" id="text4">placeholder</div>
     <div class="draggable" id="draggable5"></div>
-    <div class="text" id="text5">ive been VERY wrong</div>
+    <div class="text" id="text5">placeholder</div>
     <div class="draggable" id="draggable6"></div>
-    <div class="text" id="text6">crying again</div>
+    <div class="text" id="text6">placeholder</div>
     
     <script>
         const imageUrls = ['https://raw.githubusercontent.com/FireMS/nuriel/main/journals/journal.png'];
